--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
       <div class="portfolio-container">
         <div class="portfolio-box">
           <div class="portfolio-info">
+            <h4>ToDo List | TypeScript</h4>
+            <p>
+              TypeScript-də yeni başladığım üçün sadə dizayn bir todo list app
+              düzəltməyi fikirləşdim. Sadə olmasa da düzəltməyi bacardıq.
+              Redux-toolkit istifadə edərək ərsəyə gətirdim
+            </p>
+            <div class="links">
+              <a
+                target="_blank"
+                href="https://todo-listapp-typescript.vercel.app/"
+                >Linkə keçid <i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <div class="portfolio-info">
             <h4>Coza Store | React</h4>
             <p>
               "Coza Store" adlanan bu E-Commerce veb səhifəsini Fake Store
