--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
               keçirmişəm.
             </p>
             <div class="links">
-              <a target="_blank" href="https://coza-store-ecommerce.vercel.app/"
+              <a
+                target="_blank"
+                href="https://e-commerce-website-react-project-2.vercel.app/"
                 >Linkə keçid <i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
