--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@
               qarşı birini seçir. Ya kompyuter ya da siz oyunu qazanırsınız
             </p>
             <div class="links">
-              <a
-                target="_blank"
-                href="rs-pgame-3c8b8vakg-eltacs-projects.vercel.app"
+              <a target="_blank" href="https://mhrrmlieltac.github.io/RSPgame/"
                 >Linkə keçid <i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
