--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <h1>Hi, I'm <span>Eltac</span></h1>
         <h3 class="text-animation">I'm a <span></span></h3>
         <p>
-          1 ilə yaxındır bu sahədə təcrübə əldə edirəm. Front End developer
-          olaraq HTML, CSS, JavaScript, React texnologiyalarını öyrənib
-          layihələr də istifadə eləmişəm. TypeScript texnologiyasını öyrənirəm.
+          Bu sahə üzrə təcrübə əldə edirəm. Front End developer olaraq HTML,
+          CSS, JavaScript, React texnologiyalarını öyrənib layihələr də istifadə
+          eləmişəm. TypeScript texnologiyasını öyrənirəm.
         </p>
         <div class="social-icons">
           <a
