--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
         </div>
         <div class="portfolio-box">
           <div class="portfolio-info">
+            <h4>Weather | React</h4>
+            <p>Burada şəhərlər üzrə axtarış edərək hava şəraitini göstərir.</p>
+            <div class="links">
+              <a target="_blank" href="https://weatherprogram.netlify.app/"
+                >Linkə keçid <i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <div class="portfolio-info">
             <h4>Quiz App | HTML, CSS, JS</h4>
             <p>
               Quiz App-da api-dan gələn sualları düzgün cavablamaqla sonda neçə
