--- a/index.html
+++ b/index.html
@@ -134,6 +134,22 @@
         </div>
         <div class="portfolio-box">
           <div class="portfolio-info">
+            <h4>Show Movie | React</h4>
+            <p>
+              Burada istədiyiniz kinoları axtarış edə bilərsiz. Kinonu listə əlavə edə bilərsiz. Listin adını qoya bilərsiz.  Kinonun omdbAPİ-a gedib o kinonu göstərir.
+
+            </p>
+            <div class="links">
+              <a
+                target="_blank"
+                href="https://showmoviereact.netlify.app/"
+                >Linkə keçid <i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <div class="portfolio-info">
             <h4>Weather | React</h4>
             <p>Burada şəhərlər üzrə axtarış edərək hava şəraitini göstərir.</p>
             <div class="links">
