--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
             </div>
           </div>
         </div>
+        <div class="portfolio-box"></div>
+          <div class="portfolio-info">
+            <h4>PopcornoPolis | React</h4>
+            <p>
+              React-da yaratdğım bu saytda json obyekt üzərin də işləyərək məlumatları gətirib səhifə də göstərmişəm. Json obyekt içərisin də axtarış etmək, səbətə məhsul əlavə etmək, silmək, sayını artırıb-azaltmaq, ümumi qiyməti görmək Context APİ ilə bu funksiyaları etmişəm. 
+            </p>
+            <div class="links">
+              <a
+                target="_blank"
+                href="https://popcornopolis.vercel.app/"
+                >Linkə keçid <i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+          </div>
+        </div>
         <div class="portfolio-box">
           <div class="portfolio-info">
             <h4>Coza Store | React</h4>
