--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
             </p>
           </div>
         </div>
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-date">2024</div>
+          <div class="timeline-content">
+            <h3>Front End Developer Intern | Buta Group Azerbaijan</h3>
+            <p>Yeni başlamışam. Yeni təcrübələr əldə edəcəyimə inanıram</p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -115,16 +123,18 @@
             </div>
           </div>
         </div>
-        <div class="portfolio-box"></div>
+        <div class="portfolio-box">
           <div class="portfolio-info">
             <h4>PopcornoPolis | React</h4>
             <p>
-              React-da yaratdğım bu saytda json obyekt üzərin də işləyərək məlumatları gətirib səhifə də göstərmişəm. Json obyekt içərisin də axtarış etmək, səbətə məhsul əlavə etmək, silmək, sayını artırıb-azaltmaq, ümumi qiyməti görmək Context APİ ilə bu funksiyaları etmişəm. 
+              React-da yaratdğım bu saytda json obyekt üzərin də işləyərək
+              məlumatları gətirib səhifə də göstərmişəm. Json obyekt içərisin də
+              axtarış etmək, səbətə məhsul əlavə etmək, silmək, sayını
+              artırıb-azaltmaq, ümumi qiyməti görmək Context APİ ilə bu
+              funksiyaları etmişəm.
             </p>
             <div class="links">
-              <a
-                target="_blank"
-                href="https://popcornopolis.vercel.app/"
+              <a target="_blank" href="https://popcornopolis.vercel.app/"
                 >Linkə keçid <i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
@@ -151,13 +161,12 @@
           <div class="portfolio-info">
             <h4>Show Movie | React</h4>
             <p>
-              Burada istədiyiniz kinoları axtarış edə bilərsiz. Kinonu listə əlavə edə bilərsiz. Listin adını qoya bilərsiz.  Kinonun omdbAPİ-a gedib o kinonu göstərir.
-
+              Burada istədiyiniz kinoları axtarış edə bilərsiz. Kinonu listə
+              əlavə edə bilərsiz. Listin adını qoya bilərsiz. Kinonun omdbAPİ-a
+              gedib o kinonu göstərir.
             </p>
             <div class="links">
-              <a
-                target="_blank"
-                href="https://showmoviereact.netlify.app/"
+              <a target="_blank" href="https://showmoviereact.netlify.app/"
                 >Linkə keçid <i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
