--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               React-da yaratdğım bu saytda json obyekt üzərin də işləyərək
               məlumatları gətirib səhifə də göstərmişəm. Json obyekt içərisin də
               axtarış etmək, səbətə məhsul əlavə etmək, silmək, sayını
-              artırıb-azaltmaq, ümumi qiyməti görmək Context APİ ilə bu
+              artırıb-azaltmaq, ümumi qiyməti görmək üçün Context APİ ilə bu
               funksiyaları etmişəm.
             </p>
             <div class="links">
