--- a/index.html
+++ b/index.html
@@ -81,23 +81,16 @@
         </div>
         <div class="timeline-item">
           <div class="timeline-dot"></div>
-          <div class="timeline-date">2024</div>
+          <div class="timeline-date">2024 / 1 month</div>
           <div class="timeline-content">
-            <h3>Təcrübə (Web Developer)</h3>
-            <p>
-              CodSoft şirkəti Burada remote olaraq tasklar verilmişdi onlar
-              üzərin də işlədim. Front end tərəfin də React.js istifadə edərək
-              layihələr yazırdım. Database olaraq MySql, MongoDB istifadə
-              etmişəm
-            </p>
+            <h3>Web Developer Intern | CodSoft</h3>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-dot"></div>
-          <div class="timeline-date">2024</div>
+          <div class="timeline-date year">2024 / 3 month</div>
           <div class="timeline-content">
             <h3>Front End Developer Intern | Buta Group Azerbaijan</h3>
-            <p>Yeni başlamışam. Yeni təcrübələr əldə edəcəyimə inanıram</p>
           </div>
         </div>
       </div>
