--- a/index.html
+++ b/index.html
@@ -152,6 +152,20 @@
         </div>
         <div class="portfolio-box">
           <div class="portfolio-info">
+            <h4>Task Tracker | React</h4>
+            <p>
+              Task Tracker proyektdə sizin "To Do list" siyahını düzəldir.
+              LocalStorage-də yaddaşda saxlanır, silinir.
+            </p>
+            <div class="links">
+              <a target="_blank" href="https://task-tracker-v2.vercel.app/"
+                >Linkə keçid <i class="bx bx-right-arrow-alt"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <div class="portfolio-info">
             <h4>Show Movie | React</h4>
             <p>
               Burada istədiyiniz kinoları axtarış edə bilərsiz. Kinonu listə
