--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
             <h4>Task Tracker | React</h4>
             <p>
               Task Tracker proyektdə sizin "To Do list" siyahını düzəldir.
-              LocalStorage-də yaddaşda saxlanır, silinir.
+              LocalStorage-də yaddaşda saxlanır, silinir. Enter-ə klik etdikdə
+              əlavə edir. Gələcək də autentifikasiya ilə edəcəm. Hərənin öz "To
+              Do list" olacaq
             </p>
             <div class="links">
               <a target="_blank" href="https://task-tracker-v2.vercel.app/"
