--- a/index.html
+++ b/index.html
@@ -139,12 +139,19 @@
             <p>
               "Coza Store" adlanan bu E-Commerce veb səhifəsini Fake Store
               API-dan istifadə edərək hazırlamışam. Layihəni React ilə həyata
-              keçirmişəm.
+              keçirmişəm. Autentifikasiya və autorizasiya əməliyyatlarını Node
+              JS ilə icra etmişəm. Github-dan endirərək serveri başladıb baxa
+              bilərsiz
+              <a
+                href="https://github.com/MhrrmliEltac/ServerNodeJS"
+                target="_blank"
+                >Github Linki</a
+              >
             </p>
             <div class="links">
               <a
                 target="_blank"
-                href="https://e-commerce-website-react-project-2.vercel.app/"
+                href="https://e-commerce-website-fake.vercel.app/"
                 >Linkə keçid <i class="bx bx-right-arrow-alt"></i
               ></a>
             </div>
